--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,14 @@ dependencies:
   cloud_firestore: ^4.3.1
   google_fonts: ^4.0.1
   font_awesome_flutter: ^10.3.0
+  rxdart: ^0.27.7
+  provider: ^6.0.5
+  firebase_storage: ^11.0.10
+  date_format: ^2.0.7
+  fluttertoast: ^8.1.2
+  image_picker: ^0.8.6+1
+  uuid: ^3.0.7
+  flutter_native_image: ^0.0.6+1
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +72,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/img.png
-    - assets/img_1.png
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
